--- a/themes/cup-of-joe-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/themes/cup-of-joe-theme/docroot/_diffs/templates/portal_normal.vm
@@ -47,24 +47,6 @@ $theme.include($body_top_include)
 		#end
 	</header>
 	
-	<div class="carousel-slide" data-right="carousel" id="carousel-header">
-		<ol class="carousel-indicators"></ol>
-		
-		<div class="carousel-inner">
-			<div class="carousel-item">
-				<div class="carousel-container">
-					<div class="carousel-caption">
-						<h1></h1>
-
-						<p></p>
-
-						<p></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
 	<div id="content">
 		<nav id="breadcrumbs">#breadcrumbs()</nav>
 
@@ -78,74 +60,15 @@ $theme.include($body_top_include)
 			$theme.wrapPortlet("portlet.vm", $content_include)
 		#end
 	</div>
-	
-	<footer id="footer" role="contentinfo">
-		<div class="footer-main">
-			<div class="footer-container">
-				<div class="footer-wrapper">
-					<div class="footer-row">
-						<div class="footer-column">
-							<!--Need to add an editable text box here -->
-							<div class="footer-title">Archives</div>
-							
-							<ul>
-								<li><a href="">Optional link 1</a></li>
-								<li><a href="">Optional link 2</a></li>								
-								<li><a href="">Optional link 3</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>		
-			
-			<div class="sub-footer">
-				<div class="sub-footer-container">
-					<div class="sub-footer-row">
-						<div class="sub-footer-column" id="column-left">						
-							<div class="powered-by">
-								#language ("powered-by") <a href="http://www.liferay.com" rel="external">Liferay</a>
-							</div>
-						</div>
-						
-						<div class="sub-footer-column" id="column-right">
-							<div class="social-icons">
-								<ul>
-									<li>
-										<a href="http://www.facebook.com" id="facebook" target="_blank"></a>
-									</li>									
-									<li>
-										<a href="http://plus.google.com" id="googlePlus" target="_blank"></a>
-									</li>																		
-									<li>
-										<a href="http://www.linkedin.com" id="linkedin" target="_blank"></a>
-									</li>									
-									<li>
-										<a href="http://www.tumblr.com" id="tumblr" target="_blank"></a>
-									</li>									
-									<li>
-										<a href="http://www.twitter.com" id="twitter" target="_blank"></a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
 </div>
+
+<footer>
+	#parse ("$full_templates_path/footer.vm")
+</footer>
 
 $theme.include($body_bottom_include)
 
 $theme.include($bottom_include)
 
-#if ($theme.getSetting("header-type") == "detailed")
-	#parse ("$full_templates_path/header_detailed.vm")
-#else
-	#parse ("$full)templates_path/header_brief.vm")
-#end
-
-
 </body>
-
 </html>
