Bootstrap and HTML markup updates for Knowledge Base portlet

--- a/portlets/knowledge-base-portlet/docroot/admin/css/common.css
+++ b/portlets/knowledge-base-portlet/docroot/admin/css/common.css
@@ -193,11 +193,7 @@
 		}
 	}
 
-	.kb-article-comment-date {
-		margin-top: 10px;
-	}
-
-	.kb-article-comment-helpful {
+	.kb-article-comment-date, .kb-article-comment-helpful {
 		margin-top: 10px;
 	}
 
@@ -265,11 +261,7 @@
 			}
 		}
 
-		.kb-article-assets {
-			margin: 10px 0 0;
-		}
-
-		.kb-article-attachments {
+		.kb-article-assets, .kb-article-attachments {
 			margin: 10px 0 0;
 		}
 
